<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ammo Reloads</string>
    <string name="title_section1">Scan For Ammo</string>
    <string name="title_section2">Create New Ammo</string>
    <string name="title_section3">View Existing Ammo</string>
    <string name="title_section4">Create Manufacturer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="manufacturer_hint">Manufacturer</string>
    <string name="style_hint">Style</string>
    <string name="caliber_hint">Caliber</string>
    <string name="weight_hint">Weight</string>
    <string name="type_hint">Type</string>
    <string name="case_length_hint">Case Length</string>
    <string name="cartridge_length_hint">Cartridge Length</string>
    <string name="quantity_made_hint">Quantity Made</string>

</resources>
